connecting to neon deb

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,2 @@
-DB_USER=postgres
-DB_PASSWORD=07866
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=transport-tracking
+DATABASE_URL=postgresql://neondb_owner:npg_My5VqrJYm1ag@ep-shiny-thunder-adcqaf5k-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
 PORT=5000
