--- a/camny-frontend/package.json
+++ b/camny-frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5",
     "reat": "^0.0.1-security",
     "router-dom": "^3.0.3"
