--- a/camny-frontend/package.json
+++ b/camny-frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "i18next": "^25.6.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.552.0",
+    "npm": "^11.6.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.2.4",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5",
     "reat": "^0.0.1-security",
